tests/resource/valid/error/exception_in_fun.mamba
def g() -> Int raise [Exception] =>
    raise Exception("A")

def f(x: Int) -> Int=>
    g() handle
        err: Exception => x + 10
